--- a/app/components/chat.module.scss
+++ b/app/components/chat.module.scss
@@ -110,6 +110,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  gap: 5px;
+
+  &-end {
+    display: flex;
+    margin-left: auto;
+    gap: 5px;
+  }
 
   .chat-input-action {
     display: inline-flex;
@@ -126,10 +133,6 @@
     height: 16px;
     width: var(--icon-width);
     overflow: hidden;
-
-    &:not(:last-child) {
-      margin-right: 5px;
-    }
 
     .text {
       white-space: nowrap;
@@ -413,6 +416,12 @@
       flex-wrap: nowrap;
     }
   }
+
+  .chat-model-name {
+    font-size: 12px;
+    color: var(--black);
+    margin-left: 6px;
+  }
 }
 
 .chat-message-container {
@@ -467,42 +476,26 @@
   }
 }
 
-.chat-message-checkmark {
-  display: inline-block;
-  margin-right: 5px;
-  height: 12px;
-  width: 12px;
-  color: #13a10e;
-  fill: #13a10e;
-  user-select: none;
-  backface-visibility: hidden;
-  transform: translateZ(0px);
-}
-
-.chat-message-tools-status {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 12px;
-  margin-top: 5px;
-  line-height: 1.5;
-}
-
-.chat-message-tools-name {
-  color: #aaa;
-}
-
-.chat-message-tools-details {
-  margin-left: 5px;
-  font-weight: bold;
-  color: #999;
-}
-
 .chat-message-status {
   font-size: 12px;
   color: #aaa;
   line-height: 1.5;
   margin-top: 5px;
+}
+
+.chat-message-tools {
+  font-size: 12px;
+  color: #aaa;
+  line-height: 1.5;
+  margin-top: 5px;
+  .chat-message-tool {
+    display: flex;
+    align-items: end;
+    svg {
+      margin-left: 5px;
+      margin-right: 5px;
+    }
+  }
 }
 
 .chat-message-item {
@@ -520,15 +513,23 @@
   transition: all ease 0.3s;
 }
 
-.chat-message-item-files {
-  display: grid;
-  grid-template-columns: repeat(var(--file-count), auto);
-  grid-gap: 5px;
-}
-
-.chat-message-item-file {
-  text-decoration: none;
-  color: #aaa;
+.chat-message-audio {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 10px;
+  background-color: rgba(0, 0, 0, 0.05);
+  border: var(--border-in-light);
+  position: relative;
+  transition: all ease 0.3s;
+  margin-top: 10px;
+  font-size: 14px;
+  user-select: text;
+  word-break: break-word;
+  box-sizing: border-box;
+  audio {
+    height: 30px; /* 调整高度 */
+  }
 }
 
 .chat-message-item-image {
@@ -737,5 +738,80 @@
 
   .chat-input-send {
     bottom: 30px;
+  }
+}
+
+.shortcut-key-container {
+  padding: 10px;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.shortcut-key-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  gap: 16px;
+}
+
+.shortcut-key-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  overflow: hidden;
+  padding: 10px;
+  background-color: var(--white);
+}
+
+.shortcut-key-title {
+  font-size: 14px;
+  color: var(--black);
+}
+
+.shortcut-key-keys {
+  display: flex;
+  gap: 8px;
+}
+
+.shortcut-key {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: var(--border-in-light);
+  border-radius: 8px;
+  padding: 4px;
+  background-color: var(--gray);
+  min-width: 32px;
+}
+
+.shortcut-key span {
+  font-size: 12px;
+  color: var(--black);
+}
+
+.chat-main {
+  display: flex;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  .chat-body-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    width: 100%;
+  }
+  .chat-side-panel {
+    position: absolute;
+    inset: 0;
+    background: var(--white);
+    overflow: hidden;
+    z-index: 10;
+    transform: translateX(100%);
+    transition: all ease 0.3s;
+    &-show {
+      transform: translateX(0);
+    }
   }
 }
