--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -347,3 +347,24 @@
 .rtl-screen {
   direction: rtl;
 }
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.sidebar-title,
+.sidebar-sub-title {
+  background: linear-gradient(270deg, #ff0000, #800080);
+  background-size: 200% 200%;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: gradientAnimation 5s ease infinite;
+}
