--- a/app/components/ui-lib.module.scss
+++ b/app/components/ui-lib.module.scss
@@ -342,7 +342,7 @@
 
   &-content {
     animation: slide-in ease 0.3s;
-    min-width: 300px;
+    width: 30rem;
     .list {
       max-height: 50vh;
       overflow-x: hidden;
