fix: update selector content to fixed height

--- a/app/components/ui-lib.module.scss
+++ b/app/components/ui-lib.module.scss
@@ -345,6 +345,8 @@
     width: 30rem;
     .list {
       max-height: 50vh;
+      min-height: 50vh;
+
       overflow-x: hidden;
       overflow-y: auto;
 
