feat: optimize animation

--- a/app/components/realtime-chat/realtime-chat.module.scss
+++ b/app/components/realtime-chat/realtime-chat.module.scss
@@ -8,15 +8,15 @@
   height: 100%;
   padding: 20px;
   box-sizing: border-box;
-  .circle-mic {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    background: linear-gradient(to bottom right, #a0d8ef, #f0f8ff);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  // .circle-mic {
+  //   width: 150px;
+  //   height: 150px;
+  //   border-radius: 50%;
+  //   background: linear-gradient(to bottom right, #a0d8ef, #f0f8ff);
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  // }
   .icon-center {
     font-size: 24px;
   }
